[gd_scene load_steps=10 format=2]

[ext_resource path="res://ASSETS/Fonts/KiriFont.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ASSETS/Background/Backgrounds/backgroundColorForest.png" type="Texture" id=2]
[ext_resource path="res://TitleMenu.gd" type="Script" id=3]
[ext_resource path="res://ASSETS/Sound/music/Swinging Pants.ogg" type="AudioStream" id=4]
[ext_resource path="res://ASSETS/discord-mascot.png" type="Texture" id=5]
[ext_resource path="res://ASSETS/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://ASSETS/580b57fcd9996e24bc43c521.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 90
outline_size = 4
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 1 )

[node name="TitleMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 176.54
margin_top = 80.3138
margin_right = 826.54
margin_bottom = 218.314
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.329412, 0.462745, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.992157, 1, 0, 1 )
text = "Forest Chaos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 433.357
margin_top = 221.57
margin_right = 594.357
margin_bottom = 280.57
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.47451, 0.619608, 0.964706, 1 )
text = "Play!"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlsButton" type="Button" parent="."]
margin_left = 408.642
margin_top = 274.549
margin_right = 612.642
margin_bottom = 333.549
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.47451, 0.619608, 0.964706, 1 )
text = "Controls"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpButton" type="Button" parent="."]
margin_left = 409.638
margin_top = 330.827
margin_right = 613.638
margin_bottom = 389.827
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.47451, 0.619608, 0.964706, 1 )
text = "Help"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleScreen_Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -5.0
autoplay = true

[node name="Instagram" type="TextureRect" parent="."]
margin_left = 926.463
margin_top = 511.771
margin_right = 989.463
margin_bottom = 570.771
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton" type="LinkButton" parent="Instagram"]
margin_left = 5.0
margin_top = 5.0
margin_right = 55.0
margin_bottom = 53.0
action_mode = 0

[node name="Discord" type="TextureRect" parent="."]
margin_left = 845.297
margin_top = 511.103
margin_right = 908.297
margin_bottom = 570.103
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinkButton2" type="LinkButton" parent="Discord"]
margin_left = 5.84607
margin_top = 5.9837
margin_right = 55.8461
margin_bottom = 53.9837
focus_mode = 2
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="ControlsButton" to="." method="_on_ControlsButton_pressed"]
[connection signal="pressed" from="HelpButton" to="." method="_on_HelpButton_pressed"]
[connection signal="pressed" from="Instagram/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="Discord/LinkButton2" to="." method="_on_LinkButton2_pressed"]
